abstract class QueryBuilder {
  String build();
}
