class Statement{
  String source;
  Statement(this.source);
}